# InvestmentAI

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  alembic.ini  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
.claude/: launch.json
alembic/: env.py
api/: dependencies.py  main.py
api/middleware/: auth.py  rate_limit.py
api/routers/: audit.py  backtest.py  config_router.py  health.py  market_data.py  models.py  orders.py  portfolio.py  positions.py  predictions.py  risk.py
api/schemas/: common.py  market_data.py  orders.py  portfolio.py  predictions.py  risk.py
api/websockets/: manager.py  streams.py
backtesting/: engine.py  performance.py  simulator.py
config/: constants.py  logging_config.py  settings.py
core/: enums.py  exceptions.py  types.py
core/events/: __init__.py  base.py  market_events.py  order_events.py  risk_events.py  signal_events.py  system_events.py
core/models/: __init__.py  audit.py  base.py  market_data.py  ml_models.py  orders.py  portfolio.py  positions.py  risk.py  users.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infrastructure/docker/: Dockerfile.api
services/: worker.py
services/continuous_learning/: drift_detector.py  evaluator.py  feedback_loop.py  retrainer.py  service.py
services/data_ingestion/: normalizer.py  service.py  validator.py
services/execution/: fill_tracker.py  order_manager.py  service.py  slippage.py  smart_router.py
services/feature_engineering/: feature_registry.py  feature_store.py  service.py
services/liquidation/: emergency.py  rules.py  service.py  stop_loss.py  trailing_stop.py
services/monitoring/: alerting.py  audit.py  health.py  metrics.py  service.py
tests/: conftest.py  factories.py
(+86 files in other folders)
